--- a/values.yaml
+++ b/values.yaml
@@ -8,7 +8,7 @@ image:
   repository: nginx
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  image: "latees9"
+  tag: "latees9"
 
 imagePullSecrets: []
 nameOverride: ""
